src/components/Game.css
#root {
	max-width: 1280px;
	margin: 0 auto;
	text-align: center;

    --dark-shadow: 0px 4px 10px rgba(50, 50, 50, 0.7);
    --light-shadow: 0px 4px 10px rgba(200, 200, 200, 0.3);
    --highlight-shadow: 0px 4px 10px rgba(200, 200, 200, 0.5);
}

.App {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 100vh;
}

 .gameover {
	z-index: 10;
	position: fixed;
	top: 0;
	margin: 0;
	left: 50%; /* Center horizontally */
	transform: translateX(-50%); /* Adjust horizontal alignment */
	max-width: 100%; /* Prevent overflowing the viewport horizontally */
	box-sizing: border-box; /* Ensure padding is included in the size */
	text-align: center; /* Center-align text */
	overflow: hidden; /* Prevent content overflow */
	width: 100%;
	padding: 15vh 0 10vh 0;
}

.gameover > h2 {
    font-weight: normal;
}


.react-transform-wrapper {
	width: 100vw !important;
	height: 100vh !important;
	overflow: visible !important;
	position: fixed !important;
	top: 0;
	left: 0;
	/* padding: 3rem !important; */
}

button {
	outline: none;
	border: none;
}
.game-over-buttons {
	width: 27.5vw;
	display: flex;
	justify-content: space-around;
	position: fixed;
	bottom: 20vh;
	z-index: 10;
	left: 50%; /* Center horizontally */
	transform: translateX(-50%); /* Adjust horizontal alignment */
	max-width: 95%; /* Prevent overflowing the viewport horizontally */
	box-sizing: border-box; /* Ensure padding is included in the size */
	text-align: center; /* Center-align text */
	overflow: hidden; /* Prevent content overflow */
}

button {
    /* text-shadow: var(--dark-shadow); */
}

button:hover {
    /* text-shadow: var(--light-shadow); */
}

button:active {
    /* text-shadow: var(--highlight-shadow); */
}

.game-over-buttons > button:hover {
    /* box-shadow: var(--light-shadow); */
}

.bottom-buttons {
	position: fixed;
	bottom: 10%;
	z-index: 10;
	left: 50%; /* Center horizontally */
	transform: translateX(-50%); /* Adjust horizontal alignment */
	max-width: 95%; /* Prevent overflowing the viewport horizontally */
	box-sizing: border-box; /* Ensure padding is included in the size */
	text-align: center; /* Center-align text */
	overflow: hidden; /* Prevent content overflow */
}

.bottom-buttons > button {
	position: relative;
	transition: none;
	border: none;
    background-color: #555;
}

.bottom-buttons > .active {
    /* text-shadow: var(--light-shadow); */
}

.bottom-buttons > .active:hover {
    /* text-shadow: var(--highlight-shadow); */
}

.bottom-buttons > button::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--darkreader-background-ffffff, #181a1b);
    opacity: 40%;
}

.bottom-buttons > .active::after {
    background-color: rgba(0, 0, 0, 0) !important;
}

.bottom-buttons > button:first-child {
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
	border-right: none;
}

.bottom-buttons > button:last-child {
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
	border-left: none;
}

.stats {
	width: 25vw;
	display: flex;
	justify-content: space-between;
	align-items: center;
	z-index: 10;
	position: fixed;
	top: 10px;
	left: 50%; /* Center horizontally */
	transform: translateX(-50%); /* Adjust horizontal alignment */
}

.stats.game-over {
	visibility: hidden;
}

.board {
	padding: 6rem;
}

.row {
	display: flex;
	font-size: 20px;
}

.cell {
  padding: 0;
  width: 1.5em;
  height: 1.5em;
  background-color: #2e3035;
  border-top: 2px solid #4a4e54;
  border-left: 2px solid #4a4e54;
  border-right: 2px solid #1a1c1f;
  border-bottom: 2px solid #1a1c1f;
  border-radius: 0px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  /* text-shadow: var(--dark-shadow); */
    /* -2px 0 rgba(50 50 50 / 30%),
    2px 0 rgba(50 50 50 / 30%),
    0 -2px rgba(50 50 50 / 30%),
    0 2px rgba(50 50 50 / 30%); */
  text-align: center;
  user-select: none;
  cursor: pointer;
  white-space: nowrap;
  transition: background-color 0.15s ease;
}

.cell:hover {
  background-color: #363a40;
  /* text-shadow: var(--light-shadow); */
}

.cell.revealed {
  background-color: #3a3d42;
  color: white;
  border-top: 2px solid #252729;    
  border-left: 2px solid #252729;
  border-right: 2px solid #3e4146;
  border-bottom: 2px solid #3e4146;
}

.cell.revealed:hover {
  background-color: #424750;
}


.cell.flagged {
	/* background-color: red; */
	color: white;
}

.cell.one {
	color: blue;
}

.cell.two {
	color: green;
}

.cell.three {
	color: red;
}

.cell.four {
	color: darkblue;
}

.cell.five {
	color: darkred;
}

.cell.six {
	color: purple;
}

.cell.seven {
	color: darkgreen;
}

.cell.eight {
	color: black;
}

.slide > div {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.score {
    width: 25rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.time {
    margin-right: 1rem;
}

@media only screen and (max-width: 767px) {
	body {
		font-size: 16px;
	}

	.App {
		height: 100vh;
		width: 100vw;
		position: fixed;
		top: 0;
		left: 0;
	}

	.App > h1 {
		background-color: rgb(0, 0, 0, 0.5);
		padding: 5vh 0 3vh 0;
	}

	.game-over-buttons {
		bottom: 10vh;
		width: 75vw;
	}
	.stats {
		max-width: 100%; /* Prevent overflowing the viewport horizontally */
		width: 100%;
		padding: 1rem;
		background-color: rgb(24, 26, 27, 0.5);
		box-sizing: border-box; /* Ensure padding is included in the size */
		text-align: center; /* Center-align text */
		overflow: hidden; /* Prevent content overflow */
	}
	.stats > * {
		padding-left: 2rem;
		padding-right: 2rem;
	}

    .cell {
		background-color: #333 !important;
    }

	.cell.revealed {
		background-color: #444 !important;
	}
}

